Adding permission to store files in fileSystem, removing redundent project